modified settings in function.php. Webpack is now using different ports, so I can have multiple devservers running. Added a lot of fonts to my site. Styled Header and Footer a bit. Fixed the issue, that header from fictional-university would overlap with my sites header

--- a/sass/abstracts/variables/_structure.scss
+++ b/sass/abstracts/variables/_structure.scss
@@ -1,2 +1,6 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
+
+$margin-inline: 2rem;
+$margin-top: 3rem;
+$bottom-margin: 1rem;
